tests/script/negative/collections/asset_lookup_incorrect.s
global map<int, text> myWrongMap = ( 3 : "wrong" );

transition initial -> terminal;

@initial
foo(int amount) {
  transferHoldings(sender(), lookup(3, myWrongMap), amount, sender());
  terminate();
}
